syntax = "proto3";

package hatchet;

import "crossplane/types.proto";
import "validate/validate.proto";
import "stroppy/test.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/hatchet";

message NightlyCloudStroppy {
    message Result {
        string run_id = 1 [(validate.rules).string.len = 26];
        string grafana_url = 3 [(validate.rules).string.min_len = 1];
    }
    crossplane.SupportedCloud cloud = 1 [(validate.rules).enum.defined_only = true]; // now ony yandex
    stroppy.TestSuite test_suite = 2;
}